# oh-my-tau

./: .gitignore  .importlinter  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
benchmarks/context_management/: README_CN.md  REPORT_CN.md  benchmark.py  dataset.json  formal_benchmark.py  formal_dataset.json  formal_tasks.py
cli/: repl.py
core/: __init__.py
docs/: 2026-06-14-initial-architecture-decisions.md  agent-improvements.md  independent-development-guide.md
lion_code/: __init__.py  __main__.py  agent.py  autonomy.py  dream.py  frontmatter.py  hooks.py  mcp_client.py  memory.py  prompt.py  session.py  skills.py  subagent.py  tools.py  ui.py
lion_code/tooling/: __init__.py  builtin.py  context.py  environment.py  internal.py  mcp.py  permission.py
providers/: anthropic.py  openai_compat.py
runtime/: blocks.py  context.py  control.py  engine.py  events.py  execution_env.py  executor.py  state.py  supervisor.py
src/nanoagent/: __init__.py
tests/: helpers.py  test_autonomy.py  test_autonomy_flow.py  test_context_formal_benchmark.py  test_dream.py  test_hooks.py  test_import_contract.py  test_learning.py
tests/agent/: test_agent.py  test_control.py  test_event_contract.py  test_loop_terminal.py  test_messages.py  test_result.py  test_tools.py
tests/ai/: test_accumulator.py  test_events.py  test_messages.py  test_mock.py  test_openai.py
tests/integration/: test_control.py  test_engine.py
tests/tooling/: test_agent_internal_runtime.py  test_agent_runtime.py  test_builtin_tools.py  test_internal_tools.py  test_mcp_adapter.py  test_permission_policy.py  test_result_policy.py  (+4 more)
tools/: builtin.py
(+40 files in other folders)
