[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mono"
version = "0.1.0"
description = "Mono: a minimal but complete agent harness runtime"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
packages = ["core", "runtime", "providers", "tools", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: 需要真实 API key 的冒烟测试"]
