[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoagent"
version = "0.0.1"
description = "A small, decoupled agent framework (ai + agent runtime), modeled on oh-my-pi."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "import-linter>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
